--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "@types/react": "latest",
-    "@types/react-dom": "latest"
+    "@types/react-dom": "latest",
+    "@emailjs/browser": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
